Fixed nav button spacing

--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -161,7 +161,7 @@ nav{
   justify-content: space-around;
   list-style: none;
   color: white;
-  width: 100%;
+  width: 60%;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
